Fixed Contributors Overflowing
Solcing issue #796

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -87,7 +87,7 @@
     margin: 0 auto;
     margin-top: 30px;
     margin-bottom: 0.8em;
-    width: 70% !important;
+    width: 100% !important;
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 35px;
